argocd/my-app1/1-depl-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app1-dep
  namespace: my-app1
  labels:
    app: my-app1
    color: blue
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: my-app1
      color: blue
  template:
    metadata:
      labels:
        app: my-app1
        color: blue
    spec:
      containers:
      - name: my-app1
        image: therafk/apache2:b
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "10Mi"
            cpu: "4m"
          limits:
            memory: "20Mi"
            cpu: "16m"
---
apiVersion: v1
kind: Service
metadata:
  name: my-app1-svc
  namespace: my-app1
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  selector:
    app: my-app1
    color: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

# kubectl run curl --image=alpine/curl:8.2.1 -n kube-system -i --tty --rm -- sh
# while true; do curl -s myapp.default:8080 | grep -e "--"; sleep 1; done
# <h1>-- BLUE | .....</h1>
# <h1>-- BLUE | .....</h1>
# <h1>-- .... | GREEN</h1>
# <h1>-- .... | GREEN</h1>
