argocd/my-app1/11-depl-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
  namespace: my-app1
  labels:
    app: nginx
    color: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      color: blue
  template:
    metadata:
      labels:
        app: nginx
        color: blue
    spec:
      containers:
      - name: nginx
        image: therafk/apache2:b
        ports:
        - containerPort: 80
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: my-app1
spec:
  selector:
    app: nginx
    color: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
